--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </style>
 </head>
 <body>
-  <img src="/images/codeigo-logo.png" alt="">
+  <img src="images/codeigo-logo.png" alt="">
   <div class="login-container">
     <!-- Login Form -->
     <div id="loginForm">
