--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="login-container">
     <!-- Login Form -->
     <div id="loginForm">
-      <h1>Codeigo</h1>
+      <h1>Codeigos</h1>
       <div class="input-group">
         <input type="email" id="Email" placeholder=" " required />
         <label for="Email">Email</label>
