Updated the homepage design

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </style>
 </head>
 <body>
-  <img src="/images/codeigo-logo.png" alt="">
+  <img src="images/codeigo-logo.png" alt="">
   <div class="login-container">
     <!-- Login Form -->
     <div id="loginForm">
@@ -218,7 +218,7 @@ const firebaseConfig = {
       signInWithEmailAndPassword(auth, email, password)
         .then((userCredential) => {
           alert("Login successful!");
-          window.location.href = "/introduction.html"; // Redirect after login
+          window.location.href = "introduction.html"; // Redirect after login
         })
         .catch((error) => {
           alert("Error: " + error.message);
