--- a/introduction.html
+++ b/introduction.html
@@ -326,7 +326,7 @@
 
   <!-- Page Content -->
   <div id="page1" class="page active">
-    <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+    <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
       controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
     <div class="container">
       <div class="typed-out" id="text-1">Good day future Python dev!</div>
