--- a/introduction.html
+++ b/introduction.html
@@ -326,7 +326,7 @@
 
   <!-- Page Content -->
   <div id="page1" class="page active">
-    <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+    <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
       controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
     <div class="container">
       <div class="typed-out" id="text-1">Good day future Python dev!</div>
@@ -446,7 +446,7 @@
       if (slot1 === "print" && slot2 === "(" &&
         (slot3 === '"hello world"' || slot3 === "hello world") && slot4 === ")") {
         setTimeout(() => {
-          window.location.href = "/navbar/homepage.html";
+          window.location.href = "navbar/homepage.html";
         }, 1000);
       }
     }
