--- a/introduction.html
+++ b/introduction.html
@@ -338,7 +338,7 @@
   <div id="page2" class="page">
     <div class="introduction-sticky">
       <div class="typed-out" id="page2-1">what is your role?</div>
-      <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+      <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
         controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
       <div class="selected-text" id="selectedText2"></div>
     </div>
@@ -354,7 +354,7 @@
     <div class="introduction-sticky">
       <div class="typed-out" id="page3-1">What motivate </div>
       <div class="typed-out" id="page3-2">you learn python?</div>
-      <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+      <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
         controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
       <div class="selected-text" id="selectedText3"></div>
     </div>
@@ -371,7 +371,7 @@
       <div class="typed-out" id="page4-1">How would you </div>
       <div class="typed-out" id="page4-2">rate your coding</div>
       <div class="typed-out" id="page4-3">experience? </div>
-      <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+      <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
         controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
       <div class="selected-text" id="selectedText4"></div>
     </div>
@@ -383,7 +383,7 @@
 
   <div id="page5" class="page">
     <div class="introduction-sticky">
-      <video src="/video/robot.mp4" autoplay loop muted onpause="this.play()"
+      <video src="video/robot.mp4" autoplay loop muted onpause="this.play()"
         controlslist="nodownload nofullscreen noremoteplayback" disablePictureInPicture></video>
     </div>
     <!-- Blank Code Area with Underscores -->
