--- a/navbar/homepage.html
+++ b/navbar/homepage.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bottom to Top Scroll</title>
   <script src="https://unpkg.com/lucide@latest"></script>
-  <link rel="stylesheet" href="/css/homepage.css">
+  <link rel="stylesheet" href="css/homepage.css">
   
 </head>
 
@@ -14,7 +14,7 @@
   <div class="sticky blur-background">
     <div class="homepage-header">
       <div class="header-left">
-        <img src="/images/codeigo-logo.png"  alt="Logo">
+        <img src="images/codeigo-logo.png"  alt="Logo">
         <h1>CODEIGO</h1>
       </div>
       <i data-lucide="user" class="profile-icon"></i>
@@ -34,14 +34,14 @@
         </div>
       </div>
       <div class="container">
-        <img class="img-final" src="/images/graduation-cap.png" alt="">
+        <img class="img-final" src="images/graduation-cap.png" alt="">
         <button class="button" id="button-1" onclick="redirectToPage('/Lesson/lessons-1.html')">1</button>
         <button class="button" id="button-2" onclick="redirectToPage('/lesson/lessons-2.html')" disabled>2</button>
         <button class="button" id="button-3" onclick="redirectToPage('lessons-3.html')" disabled>3</button>
         <button class="button" id="button-4" onclick="redirectToPage('lessons-4.html')" disabled>4</button>
         <button class="button" id="button-5" onclick="redirectToPage('lessons-5.html')" disabled>5</button>
-        <img class="img" src="/images/homepage1.png" alt="">
-        <img class="img" id="img2" src="/images/homepage.png" alt="">
+        <img class="img" src="images/homepage1.png" alt="">
+        <img class="img" id="img2" src="images/homepage.png" alt="">
       </div>
     </div>
   </div>
