--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </head>
 
 <body>
-  <img src="/images/codeigo-logo.png" alt="">
+  <img src="images/codeigo-logo.png" alt="">
   <div class="login-container">
     <!-- Login Form -->
     <div id="loginForm">
