--- a/navbar/homepage.html
+++ b/navbar/homepage.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bottom to Top Scroll</title>
   <script src="https://unpkg.com/lucide@latest"></script>
-  <link rel="stylesheet" href="/css/homepage.css">
+  <link rel="stylesheet" href="homepage.css">
   
 </head>
 
