--- a/navbar/homepage.html
+++ b/navbar/homepage.html
@@ -6,7 +6,350 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bottom to Top Scroll</title>
   <script src="https://unpkg.com/lucide@latest"></script>
-  <link rel="stylesheet" href="homepage.css">
+  <style>
+        html,
+    body {
+      overflow-x: hidden;
+    }
+
+    body {
+      overflow-y: hidden;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 1600px;
+      background-color: rgba(1, 1, 27, 1);
+    }
+
+    .sticky {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 300;
+      height: 140px;
+    }
+
+    .blur-background {
+      backdrop-filter: blur(30px);
+      -webkit-backdrop-filter: blur(10px);
+      background-color: rgba(1, 1, 27, 0.5);
+    }
+
+    .homepage-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      padding-bottom: 93px;
+    }
+
+    .header-left {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .homepage-header img {
+      height: 60px;
+      width: 60px;
+    }
+
+    .homepage-header h1 {
+      margin: 0;
+      font-size: 18px;
+      color: white;
+    }
+
+    /* Profile Icon */
+    .profile-icon {
+      cursor: pointer;
+      margin-right: 15px;
+      color: white;
+    }
+
+    /* Navigation Bar (Moved to Bottom) */
+    .navbar {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      background-color: rgb(38, 38, 150);
+      padding: 10px 0;
+      gap: 10px;
+      border-radius: 20px 20px 0 0;
+    }
+
+    .navbar a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-decoration: none;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50%;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .navbar a.active {
+      height: 30px;
+      background-color: rgba(1, 1, 27, 1);
+      transform: translateY(-20px) scale(1.2);
+    }
+
+    .navbar a.active svg {
+      color: white;
+      transform: scale(1.2);
+    }
+
+    .navbar a.active span {
+      color: rgba(1, 1, 27, 1);
+    }
+
+    /* Animation for the active icon */
+    @keyframes iconBounce {
+      0% {
+        transform: translateY(0) scale(1);
+      }
+
+      50% {
+        transform: translateY(-10px) scale(1.2);
+      }
+
+      100% {
+        transform: translateY(-20px) scale(1.2);
+      }
+    }
+
+    .navbar a.active {
+      animation: iconBounce 0.5s ease-in-out;
+    }
+
+    .section {
+      display: none;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .active-section {
+      display: block;
+    }
+
+    #content {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      height: 300vh;
+      width: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      margin-top: 10px;
+      align-items: center;
+      margin-bottom: 200px;
+      height: 2000px;
+    }
+
+    .button {
+      position: relative;
+      top: 0px;
+      background-color: rgb(2, 2, 39);
+      border-radius: 20px;
+      border: 3px solid rgba(90, 100, 255, 1);
+      box-shadow: 0px 5px 0px rgba(90, 100, 255, 1);
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 20px;
+      font-weight: bold;
+      margin: 10px;
+      height: 60px;
+      text-align: center;
+      padding: 15px;
+      width: 80%;
+      cursor: pointer;
+      transition: all 0.1s ease-in-out;
+    }
+
+    .button:disabled {
+      background-color: rgb(2, 2, 39);
+      box-shadow: 0px 2px 0px rgba(18, 23, 95, 1);
+      border: 3px solid rgba(34, 40, 126, 1);
+      transform: translateY(10px);
+    }
+
+    .button:active:not(:disabled) {
+      background-color: rgb(2, 2, 39);
+      box-shadow: 0px 2px 0px rgba(90, 100, 255, 1);
+      transform: translateY(10px);
+    }
+
+    .progress-container {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      max-width: 320px;
+      margin-bottom: 0px;
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 5px;
+      z-index: 1000;
+    }
+
+    .circle {
+      width: 30px;
+      height: 30px;
+      background-color: blue;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      z-index: 6;
+      top: 70px;
+      color: white;
+    }
+
+    .start {
+      right: 20px;
+    }
+
+    .circle.final {
+      position: absolute;
+      top: 70px;
+      right: -15px;
+      background-color: blue;
+    }
+
+    .progress-line {
+      width: 100%;
+      height: 5px;
+      background-color: white;
+      position: absolute;
+      top: 85px;
+      left: 0;
+      right: 0;
+      z-index: 4;
+    }
+
+    .progress-fill {
+      height: 5px;
+      width: 0%;
+      background-color: blue;
+      position: absolute;
+      top: 85px;
+      left: 0;
+      z-index: 5;
+      transition: width 0.3s ease;
+      border-radius: 20px;
+    }
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+
+    .container img {
+      height: 200px;
+      position: relative;
+      left: 100px;
+      top: 475px;
+      width: 250px;
+    }
+
+    .container .img-final {
+      position: absolute;
+      left: 60px;
+      top: 700px;
+    }
+
+    #img2 {
+      position: absolute;
+      top: 1050px;
+      left: 0;
+      width:60%;
+      height: auto;
+    }
+
+    #svg-1-line {
+      position: absolute;
+      top: 400px;
+      z-index: -1;
+    }
+
+    #button-1 {
+      position: relative;
+      top: 1370px;
+      left: 0px;
+    }
+
+    #button-2 {
+      position: relative;
+      top: 1100px;
+      right: 80px;
+    }
+
+    #button-3 {
+      position: relative;
+      top: 830px;
+      left: 0px;
+    }
+
+    #button-4 {
+      position: relative;
+      top: 580px;
+      left: 100px;
+    }
+
+    #button-5 {
+      position: relative;
+      top: 300px;
+      left: 0px;
+    }
+
+    @media (max-width: 600px) {
+      .button {
+        font-size: 16px;
+        height: 75px;
+        padding: 10px;
+        width: 40%;
+      }
+
+      .navbar {
+        gap: 5px;
+      }
+
+      .navbar svg {
+        width: 28px;
+        height: 28px;
+      }
+
+      .navbar span {
+        font-size: 10px;
+      }
+
+      .progress-container {
+        width: 270px;
+      }
+
+      .circle {
+        width: 40px;
+        height: 40px;
+      }
+
+      .progress-line,
+      .progress-fill {
+        height: 7px;
+      }
+    }
+  </style>
   
 </head>
 
