--- a/navbar/homepage.html
+++ b/navbar/homepage.html
@@ -357,7 +357,7 @@
   <div class="sticky blur-background">
     <div class="homepage-header">
       <div class="header-left">
-        <img src="/images/codeigo-logo.png"  alt="Logo">
+        <img src="codeigo-logo.png"  alt="Logo">
         <h1>CODEIGO</h1>
       </div>
       <i data-lucide="user" class="profile-icon"></i>
@@ -377,7 +377,7 @@
         </div>
       </div>
       <div class="container">
-        <img class="img-final" src="/images/graduation-cap.png" alt="">
+        <img class="img-final" src="images/graduation-cap.png" alt="">
         <button class="button" id="button-1" onclick="redirectToPage('/Lesson/lessons-1.html')">1</button>
         <button class="button" id="button-2" onclick="redirectToPage('/lesson/lessons-2.html')" disabled>2</button>
         <button class="button" id="button-3" onclick="redirectToPage('lessons-3.html')" disabled>3</button>
