--- a/introduction.html
+++ b/introduction.html
@@ -446,7 +446,7 @@
       if (slot1 === "print" && slot2 === "(" &&
         (slot3 === '"hello world"' || slot3 === "hello world") && slot4 === ")") {
         setTimeout(() => {
-          window.location.href = "navbar/homepage.html";
+          window.location.href = "homepage.html";
         }, 1000);
       }
     }
