--- a/homepage.html
+++ b/homepage.html
@@ -378,13 +378,13 @@
       </div>
       <div class="container">
         <img class="img-final" src="images/graduation-cap.png" alt="">
-        <button class="button" id="button-1" onclick="redirectToPage('/Lesson/lessons-1.html')">1</button>
+        <button class="button" id="button-1" onclick="redirectToPage('Lesson/lessons-1.html')">1</button>
         <button class="button" id="button-2" onclick="redirectToPage('/lesson/lessons-2.html')" disabled>2</button>
         <button class="button" id="button-3" onclick="redirectToPage('lessons-3.html')" disabled>3</button>
         <button class="button" id="button-4" onclick="redirectToPage('lessons-4.html')" disabled>4</button>
         <button class="button" id="button-5" onclick="redirectToPage('lessons-5.html')" disabled>5</button>
-        <img class="img" src="/images/homepage1.png" alt="">
-        <img class="img" id="img2" src="/images/homepage.png" alt="">
+        <img class="img" src="images/homepage1.png" alt="">
+        <img class="img" id="img2" src="images/homepage.png" alt="">
       </div>
     </div>
   </div>
