--- a/homepage.html
+++ b/homepage.html
@@ -357,7 +357,7 @@
   <div class="sticky blur-background">
     <div class="homepage-header">
       <div class="header-left">
-        <img src="codeigo-logo.png"  alt="Logo">
+        <img src="images/codeigo-logo.png"  alt="Logo">
         <h1>CODEIGO</h1>
       </div>
       <i data-lucide="user" class="profile-icon"></i>
