--- a/Lesson/lessons-1.html
+++ b/Lesson/lessons-1.html
@@ -29,7 +29,7 @@
       margin: 0;
       padding: 0;
       height: 100vh; /* Full viewport height */
-      background: url('images/background.png') no-repeat center center fixed;
+      background: url('/images/background.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
       display: flex;
