--- a/asdadas.html
+++ b/asdadas.html
@@ -3,71 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction to Python</title>
+    <title>Video Boxes</title>
     <style>
         body {
-            background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
         }
-        .container {
+
+        .video-container {
+            width: 100%;
             max-width: 600px;
-            margin: auto;
-            text-align: center;
+            margin-bottom: 20px;
         }
-        h1 {
-            color: #00aaff;
+
+        video {
+            width: 100%;
+            height: auto;
         }
-        .lesson {
-            background-color: #1e1e1e;
-            padding: 15px;
-            border-radius: 8px;
-        }
-        pre {
-            background-color: #2d2d2d;
+
+        .box-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+            max-width: 600px;
+            width: 100%;
             padding: 10px;
-            border-radius: 5px;
-            overflow-x: auto;
         }
-        button {
-            background-color: #00aaff;
+
+        .box {
+            background-color: #4CAF50;
             color: white;
-            border: none;
-            padding: 10px 15px;
-            margin-top: 10px;
+            padding: 20px;
+            text-align: center;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s;
         }
-        button:hover {
-            background-color: #0088cc;
-        }
-        #output {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #333;
-            border-radius: 5px;
+
+        .box:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Introduction to Python</h1>
-        <div class="lesson">
-            <p>Python is a popular programming language known for its simplicity and readability.</p>
-            <p>Here is a basic example of Python code:</p>
-            <pre><code id="code">print("Hello, World!")</code></pre>
-            <button onclick="runCode()">Run Code</button>
-            <div id="output"></div>
-        </div>
+    <div class="video-container">
+        <video id="videoPlayer" controls>
+            <source id="videoSource" src="" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
-    
+
+    <div class="box-container">
+        <div class="box" data-video="video1.mp4">Box 1</div>
+        <div class="box" data-video="video2.mp4">Box 2</div>
+        <div class="box" data-video="video3.mp4">Box 3</div>
+        <div class="box" data-video="video4.mp4">Box 4</div>
+        <div class="box" data-video="video5.mp4">Box 5</div>
+        <div class="box" data-video="video6.mp4">Box 6</div>
+        <div class="box" data-video="video7.mp4">Box 7</div>
+        <div class="box" data-video="video8.mp4">Box 8</div>
+        <div class="box" data-video="video9.mp4">Box 9</div>
+        <div class="box" data-video="video10.mp4">Box 10</div>
+    </div>
+
     <script>
-        function runCode() {
-            let outputDiv = document.getElementById("output");
-            outputDiv.innerHTML = "Hello, World!";
-        }
+        document.addEventListener('DOMContentLoaded', function() {
+            const boxes = document.querySelectorAll('.box');
+            const videoPlayer = document.getElementById('videoPlayer');
+            const videoSource = document.getElementById('videoSource');
+
+            boxes.forEach(box => {
+                box.addEventListener('click', function() {
+                    const videoFile = this.getAttribute('data-video');
+                    videoSource.setAttribute('src', videoFile);
+                    videoPlayer.load();
+                    videoPlayer.play();
+                });
+            });
+        });
     </script>
 </body>
 </html>
