--- a/index.html
+++ b/index.html
@@ -146,6 +146,43 @@
       }
     }
 
+    .selected-text {
+      position: fixed;
+      top: 200px;
+      left: 40px;
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .container {
+      display: inline-block;
+    }
+
+    .typed-out {
+      position: relative;
+      overflow: hidden;
+      border-right: .15em solid orange;
+      white-space: nowrap;
+      animation:
+        typing 1s forwards;
+      font-size: 1.6rem;
+      width: 0;
+      color: white;
+      z-index: 999;
+    }
+
+    @keyframes typing {
+      from {
+        width: 0
+      }
+
+      to {
+        width: 100%
+      }
+    }
+
     img {
       width: 90%;
       position: absolute;
@@ -159,7 +196,7 @@
   <div class="login-container">
     <!-- Login Form -->
     <div id="loginForm">
-      <h1>Codeigo</h1>
+      <div class="typed-out" id="text-1">Welcome to Codeigo</div>
       <div class="input-group">
         <input type="email" id="Email" placeholder=" " required />
         <label for="Email">Email</label>
