--- a/homepage.html
+++ b/homepage.html
@@ -393,10 +393,10 @@
   <!-- Navigation Bar -->
   <div class="navbar">
     <a class="active" onclick="showSection('home')"><i data-lucide="home"></i> <span>Home</span></a>
-    <a href="/video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
-    <a href="interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i> <span>Compiler</span></a>
-    <a href="games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
-    <a href="exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
+    <a href="navbar/video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
+    <a href="navbar/interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i> <span>Compiler</span></a>
+    <a href="navbar/games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
+    <a href="navbar/exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
       <span>Exercise</span></a>
   </div>
 
