--- a/introduction.html
+++ b/introduction.html
@@ -316,6 +316,24 @@
     img {
       color: white;
     }
+
+    #page5 .option-button {
+      position: relative;
+      top: 10px;
+      background-color: rgb(2, 2, 39);
+      border-radius: 20px;
+      border: 3px solid rgba(90, 100, 255, 1);
+      box-shadow: 0px 5px 0px rgba(90, 100, 255, 1);
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 20px;
+      font-weight: bold;
+      margin: 10px;
+      text-align: left;
+      padding: 10px;
+      cursor: pointer;
+      transition: all 0.1s ease-in-out;
+    }
   </style>
 </head>
 
