--- a/navbar/video-lesson.html
+++ b/navbar/video-lesson.html
@@ -23,14 +23,14 @@
     </div>
 
     
-  <div class="navbar">
-    <a href="homepage.html" ><i data-lucide="home"></i> <span>Home</span></a>
-    <a class="active" href="video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
-    <a href="interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i> <span>Compiler</span></a>
-    <a href="games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
-    <a href="exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
-      <span>Exercise</span></a>
-  </div>
+    <div class="navbar">
+      <a href="/homepage.html" ><i data-lucide="home"></i> <span>Home</span></a>
+      <a class="active" href="video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
+      <a href="interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i> <span>Compiler</span></a>
+      <a href="games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
+      <a href="exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
+        <span>Exercise</span></a>
+    </div>
 
   <div class="video-container">
     <video id="videoPlayer" class="video-player" controls>
