--- a/navbar/games.html
+++ b/navbar/games.html
@@ -17,12 +17,11 @@
   </div>
 
   <div class="navbar">
-    <a href="homepage.html"><i data-lucide="home"></i> <span>Home</span></a>
-    <a href="video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
-    <a href="interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i>
-      <span>Compiler</span></a>
-    <a class="active" href="games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
-    <a href="exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
+    <a href="/homepage.html" ><i data-lucide="home"></i> <span>Home</span></a>
+    <a  href="  video-lesson.html"><i data-lucide="play-circle"></i> <span>Video</span></a>
+    <a  href="interpreter.html" onclick="showSection('compiler')"><i data-lucide="code"></i> <span>Compiler</span></a>
+    <a class="active" href="  games.html" onclick="showSection('games')"><i data-lucide="gamepad-2"></i> <span>Games</span></a>
+    <a href="  exercise.html" onclick="showSection('exercise')"><i data-lucide="book-open"></i>
       <span>Exercise</span></a>
   </div>
 
