--- a/navbar/exercise.html
+++ b/navbar/exercise.html
@@ -6,7 +6,344 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Python Exercises</title>
   <script src="https://unpkg.com/lucide@latest"></script>
-  <link rel="stylesheet" href="/css/exercise.css">
+  <style>
+    body {
+    margin: 0;
+    padding: 0;
+    font-family: monospace;
+    background-color: rgba(1, 1, 27, 1);
+    color: white;
+    max-height: 300vh;
+    background: url('/images/background.png') no-repeat center center fixed;
+    background-size: cover;
+}
+
+.sticky {
+    position: fixed;
+    width: 100%;
+    z-index: 300;
+}
+
+.homepage-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.header-left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.homepage-header h1 {
+    margin: 0;
+    font-size: 18px;
+}
+
+/* Profile Icon */
+.profile-icon {
+    cursor: pointer;
+    margin-right: 15px;
+}
+
+/* Navigation Bar */
+.navbar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(38, 38, 150);
+    padding: 5px 0;
+    gap: 10px;
+    border-radius: 20px 20px 0 0;
+}
+
+.navbar a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar a.active {
+    height: 30px;
+    background-color: rgba(1, 1, 27, 1);
+    transform: translateY(-20px) scale(1.2);
+}
+
+.navbar a.active svg {
+    color: white;
+    transform: scale(1.2);
+}
+
+.navbar a.active span {
+    color: rgba(1, 1, 27, 1);
+}
+
+/* Sections */
+.section {
+    display: none;
+    padding: 20px;
+    text-align: center;
+}
+
+.active-section {
+    display: block;
+}
+
+.button-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 150px;
+    position: absolute;
+    left: 0;
+    top: -50px;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    opacity: 1;
+}
+
+.button-container button {
+    text-align: left;
+    width: 90%;
+    padding: 20px;
+    font-size: 20px;
+    background-color: rgba(1, 1, 27, 1);
+    border-radius: 20px;
+    border: 2px solid rgba(90, 100, 255, 1);
+    box-shadow: 0px 5px 0px rgba(90, 100, 255, 1),
+        0px 5px 10px rgba(159, 165, 255, 0.5);
+    color: white;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    position: relative;
+}
+
+.button-container button:hover {
+    background-color: rgba(10, 10, 50, 1);
+}
+
+.button-container button:active {
+    transform: translateY(5px);
+    box-shadow: 0px 2px 0px rgba(90, 100, 255, 1),
+        0px 2px 5px rgba(159, 165, 255, 0.3);
+}
+
+.content-container {
+    display: none;
+    margin-top: 140px;
+    text-align: left;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.content-container.show {
+    display: block;
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.editor-container {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    margin: 10px;
+    max-width: 800px;
+    border-radius: 10px;
+}
+
+#editor {
+    width: 100%;
+    height: 300px;
+    border: 1px solid #333;
+}
+
+pre {
+    background-color: rgba(1, 1, 27, 1);
+    color: #d4d4d4;
+    padding: 10px;
+    border: 1px solid #333;
+    margin-top: 10px;
+    font-family: sans-serif;
+    font-size: 14px;
+    overflow-x: auto;
+}
+
+button.run-button {
+    position: relative;
+    top: 0px;
+    background-color: rgb(2, 2, 39);
+    border-radius: 10px;
+    border: 3px solid rgba(90, 100, 255, 1);
+    box-shadow: 0px 2px 0px rgba(90, 100, 255, 1);
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+    height: 40px;
+    text-align: center;
+    padding: 5px;
+    width: 20%;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+    position: relative;
+    left: 70%;
+}
+
+button.run-button:active {
+    background-color: rgb(2, 2, 39);
+    box-shadow: 0px 2px 0px rgba(90, 100, 255, 1);
+    transform: translateY(10px);
+}
+
+.return-button {
+    position: relative;
+    left: 10px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background: red;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.return-button:hover {
+    background: darkred;
+}
+
+.finish-button {
+    position: relative;
+    left: 160px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background: green;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.finish-button:hover {
+    background: darkgreen;
+    position: relative;
+    left: 160px;
+}
+
+.check-button {
+    background: #4CAF50;
+    color: white;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: not-allowed;
+}
+
+.check-button:hover {
+    background: #45a049;
+}
+
+.exercise-button.completed {
+    background-color: #4CAF50;
+    color: white;
+    border: 2px solid #4CAF50;
+}
+
+.exercise-button.completed:hover {
+    background-color: #45a049;
+}
+
+.exercise-button.completed:active {
+    transform: none;
+}
+
+/* Media Queries for Mobile */
+@media (max-width: 600px) {
+    .homepage-header h1 {
+        font-size: 16px;
+    }
+
+    .homepage-header img {
+        height: 35px;
+        width: 35px;
+    }
+
+    .button-container {
+        margin-top: 120px;
+    }
+
+    .button-container button {
+        padding: 15px;
+        font-size: 16px;
+    }
+
+    .content-container {
+        margin-top: 100px;
+    }
+
+    #editor {
+        height: 200px;
+    }
+
+    pre {
+        font-size: 12px;
+    }
+
+    button.run-button {
+        font-size: 16px;
+        width: 30%;
+        left: 60%;
+        height: 35px;
+    }
+
+    .editor-container {
+        padding: 5px;
+    }
+
+    .navbar {
+        gap: 5px;
+    }
+
+    .navbar svg {
+        width: 18px;
+        height: 18px;
+    }
+
+    .navbar span {
+        font-size: 10px;
+    }
+
+    .navbar a.active {
+        transform: translateY(-15px) scale(1.1);
+    }
+
+    .navbar a.active svg {
+        transform: scale(1.1);
+    }
+}
+  </style>
 </head>
 
 <body>
