--- a/Lesson/lessons-1.html
+++ b/Lesson/lessons-1.html
@@ -294,7 +294,7 @@
 
   <div class="page" id="page-4">
     <h1>Success!</h1>
-    <button onclick="window.location.href='/navbar/homepage.html'">Go to Homepage</button>
+    <button onclick="window.location.href='/homepage.html'">Go to Homepage</button>
     <button class="return" onclick="previousPage()">Return</button>
   </div>
 
