--- a/Lesson/lessons-1.html
+++ b/Lesson/lessons-1.html
@@ -288,7 +288,7 @@
         <!-- Header -->
         <header class="app-header">
             <div class="logo">
-                <img src="/Lesson/codeigo-logo.png" alt="Codeigo Logo">
+                <img src="/codeigo-logo.png" alt="Codeigo Logo">
                 <span>Codeigo</span>
             </div>
 
