--- a/games.html
+++ b/games.html
@@ -262,7 +262,7 @@
 
   <div class="games-container">
     <!-- Type Fast Game -->
-    <div class="game-card animate__animated animate__fadeInUp type-fast" onclick="location.href='type-fast.html'">
+    <div class="game-card animate__animated animate__fadeInUp type-fast" onclick="location.href='games/typeracer.html'">
       <div class="game-icon">
         <i data-lucide="keyboard"></i>
       </div>
@@ -271,7 +271,7 @@
     </div>
 
     <!-- Fill the Blank Game -->
-    <div class="game-card animate__animated animate__fadeInUp fill-blank" onclick="location.href='fill-blank.html'">
+    <div class="game-card animate__animated animate__fadeInUp fill-blank" onclick="location.href='games/fillblank.html'">
       <div class="game-icon">
         <i data-lucide="square-code"></i>
       </div>
@@ -280,7 +280,7 @@
     </div>
 
     <!-- Quizziverse Game -->
-    <div class="game-card animate__animated animate__fadeInUp quizziverse" onclick="location.href='quizziverse.html'">
+    <div class="game-card animate__animated animate__fadeInUp quizziverse" onclick="location.href='games/quizziverse.html'">
       <div class="game-icon">
         <i data-lucide="help-circle"></i>
       </div>
