Your descriptive commit message

--- a/navbar/exercise.html
+++ b/navbar/exercise.html
@@ -14,8 +14,9 @@
     background-color: rgba(1, 1, 27, 1);
     color: white;
     max-height: 300vh;
-    background: url('/images/background.png') no-repeat center center fixed;
     background-size: cover;
+    background-color: rgba(1, 1, 27, 1);
+
 }
 
 .sticky {
